crates/formatter/tests/snapshots/snapshots__synapse__main__delta__72__07thread_receipts.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2022 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- Add a nullable column for thread ID to the receipts table; this allows a
-- receipt per user, per room, as well as an unthreaded receipt (corresponding
-- to a null thread ID).

alter table receipts_linearized add column thread_id text;
alter table receipts_graph add column thread_id text;

-- Rebuild the unique constraint with the thread_id.
alter table receipts_linearized
	add constraint receipts_linearized_uniqueness_thread
		unique (room_id, receipt_type, user_id, thread_id);

alter table receipts_graph
	add constraint receipts_graph_uniqueness_thread
		unique (room_id, receipt_type, user_id, thread_id);
